--- a/gradlePublish/action.yml
+++ b/gradlePublish/action.yml
@@ -20,7 +20,7 @@ runs:
   steps:
     - name: Gradle Build Env
       #     uses: jonmadsen/composite-actions/gradleEnv@v1
-      uses: ../gradleEnv
+      uses: ./gradleEnv
       with:
         java-version: ${{ inputs.javaVersion }}
         distribution: ${{ inputs.javaDistribution }}
