--- a/gradleBuild/action.yml
+++ b/gradleBuild/action.yml
@@ -14,7 +14,7 @@ runs:
   steps:
     - name: Gradle Build Env
       #     uses: jonmadsen/composite-actions/gradleEnv@v1
-      uses: ./gradleEnv
+      uses: ${{github.action_path}}/../gradleEnv
       with:
         java-version: ${{ inputs.javaVersion }}
         distribution: ${{ inputs.javaDistribution }}
