--- a/gradleBuild/action.yml
+++ b/gradleBuild/action.yml
@@ -14,7 +14,8 @@ runs:
   steps:
     - name: Gradle Build Env
       #     uses: jonmadsen/composite-actions/gradleEnv@v1
-      uses: /gradleEnv
+      uses: jonmadsen/composite-actions/gradleEnv@master
+      #uses: /gradleEnv
       with:
         java-version: ${{ inputs.javaVersion }}
         distribution: ${{ inputs.javaDistribution }}
