--- a/gradlePublish/action.yml
+++ b/gradlePublish/action.yml
@@ -29,7 +29,7 @@ runs:
       # reference like `jonmadsen/composite-actions/gradleEnv@<Version Variable>
       uses: jonmadsen/composite-actions/gradleEnv@master
       with:
-        javaVersion ${{ inputs.javaVersion }}
+        javaVersion: ${{ inputs.javaVersion }}
         javaDistribution: ${{ inputs.javaDistribution }}
     - name: Build
       uses: gradle/gradle-build-action@v2
