--- a/gradleArtifactoryPublish/action.yml
+++ b/gradleArtifactoryPublish/action.yml
@@ -12,11 +12,11 @@ inputs:
   artifactoryUsername:
     description: 'Artifactory Username'
     required: true
-    default: ${{ secrect.ARTIFACTORY_USERNAME }}
+    default: ${{ secret.ARTIFACTORY_USERNAME }}
   artifactoryPassword:
     description: 'Artifactory Password'
     required: true
-    default: ${{ secrect.ARTIFACTORY_PASSWORD }}
+    default: ${{ secret.ARTIFACTORY_PASSWORD }}
 runs:
   using: "composite"
   steps:
