--- a/gradleBuild/action.yml
+++ b/gradleBuild/action.yml
@@ -4,11 +4,11 @@ inputs:
   artifactoryUsername:
     description: 'Artifactory Username'
     required: true
-    default: ${{ secret.ARTIFACTORY_USERNAME }}
+    default: ${{ secrets.ARTIFACTORY_USERNAME }}
   artifactoryPassword:
     description: 'Artifactory Password'
     required: true
-    default: ${{ secret.ARTIFACTORY_PASSWORD }}
+    default: ${{ secrets.ARTIFACTORY_PASSWORD }}
   javaVersion:
     description: 'Version of java'
     required: false
