Pass artifactory password to build

--- a/gradleBuild/action.yml
+++ b/gradleBuild/action.yml
@@ -36,3 +36,5 @@ runs:
       with:
         arguments: |
           build
+          -Partifactory_user=${{ inputs.artifactoryUsername }}
+          -Partifactory_password=${{ inputs.artifactoryPassword }}
