--- a/extractGradleBuildValues/action.yml
+++ b/extractGradleBuildValues/action.yml
@@ -27,6 +27,9 @@ runs:
       with:
         file: build.gradle.kts
       id: get_version
+    - name: Dump Validate
+      shell: bash
+      run: echo ${{ inputs.validateVersion }}
     - name: Validate Version
       if: ${{ inputs.validateVersion }}
       uses: rubenesp87/semver-validation-action@0.0.6
