Try boolean as expression

--- a/extractGradleBuildValues/action.yml
+++ b/extractGradleBuildValues/action.yml
@@ -5,7 +5,7 @@ inputs:
     type: boolean
     description: 'Validate version'
     required: false
-    default: 'false'
+    default: ${{ false }}
 outputs:
   branch:
     description: "Current branch name"
