--- a/extractGradleBuildValues/action.yml
+++ b/extractGradleBuildValues/action.yml
@@ -5,7 +5,7 @@ inputs:
     type: boolean
     description: 'Validate version'
     required: false
-    default: ${{ false }}
+    default: false
 outputs:
   branch:
     description: "Current branch name"
@@ -31,7 +31,7 @@ runs:
       shell: bash
       run: echo ${{ inputs.validateVersion }}
     - name: Validate Version
-      if: ${{ inputs.validateVersion }}
+      if: ${{ inputs.validateVersion == true}}
       # if: ${{ false }}
       uses: rubenesp87/semver-validation-action@0.0.6
       with:
