Try boolean as expression

--- a/extractGradleBuildValues/action.yml
+++ b/extractGradleBuildValues/action.yml
@@ -31,8 +31,9 @@ runs:
       shell: bash
       run: echo ${{ inputs.validateVersion }}
     - name: Validate Version
+      # TODO: Ok, ideally this should just be if: ${{ inputs.validateVersion }} but
+      # booleans don't seem to be validated properly like this
       if: ${{ inputs.validateVersion == true}}
-      # if: ${{ false }}
       uses: rubenesp87/semver-validation-action@0.0.6
       with:
         version: ${{ steps.get_version.outputs.version }}
