--- a/extractGradleBuildValues/action.yml
+++ b/extractGradleBuildValues/action.yml
@@ -27,12 +27,9 @@ runs:
       with:
         file: build.gradle.kts
       id: get_version
-    - name: Dump Validate
-      shell: bash
-      run: echo ${{ inputs.validateVersion }}
     - name: Validate Version
       # TODO: Ok, ideally this should just be if: ${{ inputs.validateVersion }} but
-      # booleans don't seem to be validated properly like this
+      # booleans don't seem to be working as expected
       if: ${{ inputs.validateVersion == 'true'}}
       uses: rubenesp87/semver-validation-action@0.0.6
       with:
