--- a/.github/workflows/gradleBuildAndPublish.yml
+++ b/.github/workflows/gradleBuildAndPublish.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Gradle Build Values
-        uses: jonmadsen/composite-actions/extractGradleBuildValues@v1.0.27
+        uses: jonmadsen/composite-actions/extractGradleBuildValues@master
         with:
           validateVersion: true
 
@@ -29,7 +29,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Gradle Build
-        uses: jonmadsen/composite-actions/gradleBuild@v1.0.27
+        # TODO:  This is no good, this means that if say we had a action package published of
+        # version 1.0.5, that this would always refer to the actions of master, and master could
+        # be at a later version say 2.0.0, so eessentially this use is not guaranteed to reference
+        # an action in the same release that it is published in unless the published release being
+        # used is always the latest.
+        # Ideally we would just reference the local action, and when the release was packaged
+        # it would always reference that, or we somehow tie the release version into this
+        # reference like `jonmadsen/composite-actions/gradleEnv@<Version Variable>
+        uses: jonmadsen/composite-actions/gradleBuild@master
         with:
           javaVersion: ${{ inputs.javaVersion }}
           javaDistribution: ${{ inputs.javaDistribution }}
@@ -42,7 +50,7 @@ jobs:
     if: ${{ (needs.setup.outputs.branch == 'master') && !endsWith(needs.setup.outputs.version, '-snapshot') }}
     steps:
       - name: Gradle Verify Artifact Does Not Exist
-        uses: jonmadsen/composite-actions/gradleVerifyArtifactNotExist@v1.0.27
+        uses: jonmadsen/composite-actions/gradleVerifyArtifactNotExist@master
         with:
           version: ${{ needs.setup.outputs.version }}
           artifactoryUsername: ${{ secrets.ARTIFACTORY_USERNAME }}
@@ -55,10 +63,11 @@ jobs:
     #    needs: [setup, build, verifyArtifactNotExist]
     needs: [setup, build]
     runs-on: ubuntu-latest
-    if: ${{ (needs.setup.outputs.branch == 'master') || endsWith(needs.setup.outputs.version, '-snapshot') }}
+#    if: ${{ (needs.setup.outputs.branch == 'master') || endsWith(needs.setup.outputs.version, '-snapshot') }}
+    if: ${{ endsWith(needs.setup.outputs.version, '-snapshot') }}
     steps:
       - name: Gradle Publish
-        uses: jonmadsen/composite-actions/gradlePublish@v1.0.27
+        uses: jonmadsen/composite-actions/gradlePublish@master
         with:
           javaVersion: ${{ inputs.javaVersion }}
           javaDistribution: ${{ inputs.javaDistribution }}
