--- a/.github/workflows/gradleBuildAndPublish.yml
+++ b/.github/workflows/gradleBuildAndPublish.yml
@@ -28,6 +28,10 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     steps:
+      # TODO: Remove this debug step
+      - name: Dump Version
+        shell: bash
+        run: echo ${{ needs.setup.outputs.version }}
       - name: Gradle Build
         # TODO:  This is no good, this means that if say we had a action package published of
         # version 1.0.5, that this would always refer to the actions of master, and master could
