--- a/.github/workflows/gradleBuildAndPublish.yml
+++ b/.github/workflows/gradleBuildAndPublish.yml
@@ -31,6 +31,10 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     steps:
+      # TODO: Remove this debug step
+      - name: Dump Version
+        shell: bash
+        run: echo ${{ needs.setup.outputs.version }}
       - name: Gradle Build
         # TODO:  This is no good, this means that if say we had a action package published of
         # version 1.0.5, that this would always refer to the actions of master, and master could
@@ -63,14 +67,14 @@ jobs:
   # We don't really need to separate this from the above build, but trying this.  Feeling like overkill so we could just roll the
   # publishing step into the build job with the 'if' conditional
   publish:
-    #    needs: [setup, build, verifyArtifactNotExist]
-    needs: [setup, build]
+    needs: [setup, build, verifyArtifactNotExist]
     runs-on: ubuntu-latest
     if: ${{ (needs.setup.outputs.branch == 'master') || endsWith(needs.setup.outputs.version, '-snapshot') }}
     steps:
       - name: Gradle Publish
         uses: jonmadsen/composite-actions/gradleArtifactoryPublish@master
         with:
+          version: ${{ needs.setup.outputs.version }}
           javaVersion: ${{ inputs.javaVersion }}
           javaDistribution: ${{ inputs.javaDistribution }}
           artifactoryUsername: ${{ secrets.ARTIFACTORY_USERNAME }}
