More boolean logic

--- a/.github/workflows/gradleBuildAndPublish.yml
+++ b/.github/workflows/gradleBuildAndPublish.yml
@@ -69,11 +69,13 @@ jobs:
   publish:
     needs: [setup, build, verifyArtifactNotExist]
     runs-on: ubuntu-latest
-    if: ${{ (needs.setup.outputs.branch == 'master') || endsWith(needs.setup.outputs.version, '-snapshot') }}
+    if: ${{ (always() && contains(needs.build.result, 'success')) &&
+    ((needs.setup.outputs.branch == 'master') || endsWith(needs.setup.outputs.version, '-snapshot')) }}
     steps:
       - name: Gradle Publish
         uses: jonmadsen/composite-actions/gradleArtifactoryPublish@master
         with:
+          # TODO: Maybe extract version in action rather than passing in
           version: ${{ needs.setup.outputs.version }}
           javaVersion: ${{ inputs.javaVersion }}
           javaDistribution: ${{ inputs.javaDistribution }}
