--- a/gradleArtifactoryPublish/action.yml
+++ b/gradleArtifactoryPublish/action.yml
@@ -38,6 +38,11 @@ runs:
       uses: rubenesp87/semver-validation-action@0.0.6
       with:
         version: ${{ inputs.version }}
+#    - uses: jfrog/setup-jfrog-cli@v1
+    # TODO: Remove this debug step
+    - name: Dump User
+      shell: bash
+      run: echo ${{ inputs.artifactoryUsername }}
     - name: Publish
       uses: gradle/gradle-build-action@v2
       with:
