--- a/.github/workflows/gradleBuildAndPublish.yml
+++ b/.github/workflows/gradleBuildAndPublish.yml
@@ -31,6 +31,11 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     steps:
+      - name: Dump User
+        shell: bash
+        run: |
+        echo 'Artifactory user name:'
+        echo ${{ secrets.ARTIFACTORY_USERNAME }}
       - name: Gradle Verify Artifact Does Not Exist
         # We always want to run this job even if we don't execute this step so that we can
         # simplify the conditional job logic for subsequent steps
