--- a/gradleVerifyArtifactNotExist/action.yml
+++ b/gradleVerifyArtifactNotExist/action.yml
@@ -32,9 +32,7 @@ runs:
     # TODO: Remove this debug step
     - name: Dump User
       shell: bash
-      run: |
-      echo 'Artifactory user name:'
-      echo ${{ inputs.artifactoryUsername }}
+      run: echo ${{ inputs.artifactoryUsername }}
     - name: Verify Artifact Not Exist
       uses: gradle/gradle-build-action@v2
       with:
