--- a/.github/workflows/gradleBuildAndPublish.yml
+++ b/.github/workflows/gradleBuildAndPublish.yml
@@ -16,6 +16,15 @@ defaults:
   run:
     shell: bash
 jobs:
+  # TODO: Remove this debug step
+  dumpTestSecret:
+    runs-on: ubuntu-latest
+    steps:
+      # TODO: Remove this debug step
+      - name: Dump Secret
+        shell: bash
+        run: echo ${{ secrets.TEST_SECRET }}
+
   setup:
     outputs:
       version: ${{ steps.gradle_build_values.outputs.version }}
