--- a/.github/workflows/gradleBuildAndPublish.yml
+++ b/.github/workflows/gradleBuildAndPublish.yml
@@ -40,6 +40,10 @@ jobs:
       - name: Dump Version
         shell: bash
         run: echo ${{ needs.setup.outputs.version }}
+      # TODO: Remove this debug step
+      - name: Dump Bogus Secret
+        shell: bash
+        run: echo ${{ secrets.BOGUS_SECRET }}
       - name: Gradle Build
         # TODO:  This is no good, this means that if say we had a action package published of
         # version 1.0.5, that this would always refer to the actions of master, and master could
